[package]
name = "cue"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
poem = {version= "3.1.12", features = ["tokio-metrics"]}
redis = "0.32.7"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = {version ="0.8.6", features= ["postgres"]}
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version= "0.3.20", features=["env-filter", "std"]}
uuid = "1.18.1"
