[package]
name = "cue"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.42", features = ["serde"]}
dotenvy = "0.15.7"
futures = "0.3.31"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
poem = {version= "3.1.12", features = ["tokio-metrics"]}
redis ={ version = "0.32.7", features = ["aio","tokio-comp"] }
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = {version ="0.8.6", features= ["postgres", "runtime-tokio-rustls", "uuid",  "chrono", "json"]}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version= "0.3.20", features=["env-filter", "std"]}
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = {version="0.20.0", features=["derive"]}
